[package]
name = "binary_search_tree"
version = "0.1.1"
authors = ["PrototypeRailGun <52821033+PrototypeRailGun@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/PrototypeRailGun/binary_search_tree"
description = "Binary search tree implementation"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
