[package]
name = "binary_search_tree"
version = "0.2.2"
authors = ["PrototypeRailGun <52821033+PrototypeRailGun@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/PrototypeRailGun/binary_search_tree"
homepage = "https://github.com/PrototypeRailGun/binary_search_tree"
description = "Binary search tree implementation"
readme = "README.md"


[dependencies]
